--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+* {
+	padding: 0px;
+	/* margin-left: 10px; */
+	text-decoration: none;
+	list-style: none;
+	/* text-align: center; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+	display: flex;
+	justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title {
+	font-size: 24px;
+	color: red;
+	font-weight: bold;
+	margin-bottom: 10px;
+	text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container {
+	/* width: 450px; */
+	/* height: 100px; */
+	/* border: 1px solid gray; */
+	/* padding: 10px; */
 }
 
-.App-link {
-  color: #61dafb;
+.todoTitle input {
+	width: 400px;
+	text-align: left;
+	box-sizing: border-box;
+	padding: 7px 0 7px 10px;
+	margin-bottom: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todoInsert Button {
+	width: 400px;
+	/* background-color: rgb(106, 189, 238); */
+	/* border: none; */
+	padding: 5px;
+	/* color: white; */
+	cursor: pointer;
+}
+
+.btns {
+	display: flex;
+	justify-content: center;
+	margin-bottom: 20px;
+	cursor: pointer;
+}
+
+.todoListItem {
+	width: 400px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.box {
+	display: flex;
+}
+
+.text {
+	/* margin-right: 100px; */
+}
+
+.checked {
+	margin-right: 100px;
+	text-decoration: line-through;
 }
